API-Organizador-Eventos/API-Organizador-Eventos/src/main/kotlin/com/example/API_Organizador_Eventos/error/exception/NotAuthorizedException.kt
package com.example.API_Organizador_Eventos.error.exception

class NotAuthorizedException(message: String) : RuntimeException("Not Authorized Exception (401). $message") {
}